--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "portafolio",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "http://yonabordon.github.io/portfolio",
+	"homepage": "https://yonabordon.github.io/portfolio",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
