--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react-icons": "^4.7.1",
 		"react-router-dom": "^6.6.0",
 		"react-scripts": "5.0.1",
+		"react-typed": "^1.2.0",
 		"sass": "^1.57.1",
 		"sort-by": "^1.2.0",
 		"typescript": "^4.9.4",
